--- a/RayTracingInOneWeekendSeries/RayTracingInOneWeekendSeries.vcxproj.filters
+++ b/RayTracingInOneWeekendSeries/RayTracingInOneWeekendSeries.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="sphere.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="rtweekend.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
