--- a/RayTracingInOneWeekendSeries/RayTracingInOneWeekendSeries.vcxproj
+++ b/RayTracingInOneWeekendSeries/RayTracingInOneWeekendSeries.vcxproj
@@ -136,6 +136,7 @@
     <ClInclude Include="colour.h" />
     <ClInclude Include="hittable.h" />
     <ClInclude Include="interval.h" />
+    <ClInclude Include="material.h" />
     <ClInclude Include="ray.h" />
     <ClInclude Include="rtweekend.h" />
     <ClInclude Include="sphere.h" />
