--- a/RayTracingInOneWeekendSeries/RayTracingInOneWeekendSeries.vcxproj
+++ b/RayTracingInOneWeekendSeries/RayTracingInOneWeekendSeries.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="aabb.h" />
     <ClInclude Include="camera.h" />
     <ClInclude Include="colour.h" />
     <ClInclude Include="hittable.h" />
