--- a/RayTracingInOneWeekendSeries/RayTracingInOneWeekendSeries.vcxproj.filters
+++ b/RayTracingInOneWeekendSeries/RayTracingInOneWeekendSeries.vcxproj.filters
@@ -71,5 +71,8 @@
     <ClInclude Include="perlin.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="quad.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
