--- a/RayTracingInOneWeekendSeries/RayTracingInOneWeekendSeries.vcxproj
+++ b/RayTracingInOneWeekendSeries/RayTracingInOneWeekendSeries.vcxproj
@@ -136,6 +136,7 @@
     <ClInclude Include="bvh_node.h" />
     <ClInclude Include="camera.h" />
     <ClInclude Include="colour.h" />
+    <ClInclude Include="disk.h" />
     <ClInclude Include="hittable.h" />
     <ClInclude Include="interval.h" />
     <ClInclude Include="material.h" />
