--- a/RayTracingInOneWeekendSeries/RayTracingInOneWeekendSeries.vcxproj.filters
+++ b/RayTracingInOneWeekendSeries/RayTracingInOneWeekendSeries.vcxproj.filters
@@ -77,5 +77,8 @@
     <ClInclude Include="triangle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="disk.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
