--- a/RayTracingInOneWeekendSeries/RayTracingInOneWeekendSeries.vcxproj
+++ b/RayTracingInOneWeekendSeries/RayTracingInOneWeekendSeries.vcxproj
@@ -139,17 +139,20 @@
     <ClInclude Include="camera.h" />
     <ClInclude Include="colour.h" />
     <ClInclude Include="constant_medium.h" />
+    <ClInclude Include="cosine_pdf.h" />
     <ClInclude Include="disk.h" />
     <ClInclude Include="hittable.h" />
     <ClInclude Include="interval.h" />
     <ClInclude Include="material.h" />
     <ClInclude Include="onb.h" />
+    <ClInclude Include="pdf.h" />
     <ClInclude Include="perlin.h" />
     <ClInclude Include="quad.h" />
     <ClInclude Include="ray.h" />
     <ClInclude Include="rtweekend.h" />
     <ClInclude Include="rtw_image.h" />
     <ClInclude Include="sphere.h" />
+    <ClInclude Include="sphere_pdf.h" />
     <ClInclude Include="stb_image.h" />
     <ClInclude Include="texture.h" />
     <ClInclude Include="triangle.h" />
