--- a/RayTracingInOneWeekendSeries/RayTracingInOneWeekendSeries.vcxproj.filters
+++ b/RayTracingInOneWeekendSeries/RayTracingInOneWeekendSeries.vcxproj.filters
@@ -86,5 +86,14 @@
     <ClInclude Include="onb.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="pdf.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="sphere_pdf.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="cosine_pdf.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
