--- a/RayTracingInOneWeekendSeries/RayTracingInOneWeekendSeries.vcxproj
+++ b/RayTracingInOneWeekendSeries/RayTracingInOneWeekendSeries.vcxproj
@@ -142,6 +142,7 @@
     <ClInclude Include="cosine_pdf.h" />
     <ClInclude Include="disk.h" />
     <ClInclude Include="hittable.h" />
+    <ClInclude Include="hittable_pdf.h" />
     <ClInclude Include="interval.h" />
     <ClInclude Include="material.h" />
     <ClInclude Include="onb.h" />
