--- a/RayTracingInOneWeekendSeries/RayTracingInOneWeekendSeries.vcxproj.filters
+++ b/RayTracingInOneWeekendSeries/RayTracingInOneWeekendSeries.vcxproj.filters
@@ -98,5 +98,8 @@
     <ClInclude Include="hittable_pdf.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="mixture_pdf.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
